# aoc2025

./: .gitignore  .isort.cfg  Makefile  pyproject.toml
day01/: safe_password.py
