[project]
name = "aoc2025"
version = "0.1.0"
description = ""
authors = [
    {name = "Gianluca Mascolo",email = "gianluca.mascolo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "isort (>=7.0.0,<8.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]

# Tool configurations
[tool.black]
line-length = 200
target-version = ['py39', 'py310', 'py311', 'py312']
extend-exclude = '''
/(
  old
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | __pycache__
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 200
multi_line_output = 7
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".gitignore", ".venv", "old"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
